--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,33 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Boost Build",
+            "label": "compile current file",
+            "type": "shell",
+            "command": "b2",
+            "args": ["toolset=gcc", "--build-dir=c:/users/veryp/Desktop/out", "obj_${fileBasenameNoExtension}"],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "options": {
+                "cwd": "${workspaceFolder}/elvis",
+                "env": {
+                    "Path": "${env:Path};C:/Users/veryp/Desktop/libs/boost_1_80_0;C:/Users/veryp/Desktop/MinGW64/bin"
+                }
+            },
+            "presentation": {
+                "clear": true
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "compile all",
             "type": "shell",
             "command": "b2",
             "args": ["toolset=gcc", "--build-dir=c:/users/veryp/Desktop/out"],
             "group": {
                 "kind": "build",
-                "isDefault": true
+                "isDefault": false
             },
             "options": {
                 "cwd": "${workspaceFolder}/elvis",
