--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,15 +7,23 @@
             "label": "compile current file",
             "type": "shell",
             "command": "b2",
-            "args": ["toolset=gcc", "--build-dir=c:/users/veryp/Desktop/out", "obj_${fileBasenameNoExtension}"],
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "options": {
-                "cwd": "${workspaceFolder}/elvis",
-                "env": {
-                    "Path": "${env:Path};C:/Users/veryp/Desktop/libs/boost_1_80_0;C:/Users/veryp/Desktop/MinGW64/bin"
+            "windows": {
+                "args": ["toolset=gcc", "--build-dir=c:/users/veryp/desktop/build", "obj_${fileBasenameNoExtension}"],
+                "options": {
+                    "cwd": "${workspaceFolder}/elvis",
+                    "env": {
+                        "Path": "${env:Path};C:/Users/veryp/Desktop/libs/boost_1_80_0;C:/Users/veryp/Desktop/MinGW64/bin"
+                    }
+                }
+            },
+            "linux": {
+                "args": ["toolset=gcc", "--build-dir=/home/pavel/build", "obj_${fileBasenameNoExtension}"],
+                "options": {
+                    "cwd": "${workspaceFolder}/elvis"
                 }
             },
             "presentation": {
@@ -27,15 +35,23 @@
             "label": "compile all",
             "type": "shell",
             "command": "b2",
-            "args": ["toolset=gcc", "--build-dir=c:/users/veryp/Desktop/out"],
             "group": {
                 "kind": "build",
                 "isDefault": false
             },
-            "options": {
-                "cwd": "${workspaceFolder}/elvis",
-                "env": {
-                    "Path": "${env:Path};C:/Users/veryp/Desktop/libs/boost_1_80_0;C:/Users/veryp/Desktop/MinGW64/bin"
+            "windows": {
+                "args": ["toolset=gcc", "--build-dir=c:/users/veryp/desktop/build"],
+                "options": {
+                    "cwd": "${workspaceFolder}/elvis",
+                    "env": {
+                        "Path": "${env:Path};C:/Users/veryp/Desktop/libs/boost_1_80_0;C:/Users/veryp/Desktop/MinGW64/bin"
+                    }
+                }
+            },
+            "linux": {
+                "args": ["toolset=gcc", "--build-dir=/home/pavel/build"],
+                "options": {
+                    "cwd": "${workspaceFolder}/elvis"
                 }
             },
             "presentation": {
