--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,21 +5,61 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "C++ GDB Windows",
+            "name": "2gis-ut",
             "type": "cppdbg",
             "MIMode": "gdb",
-            "miDebuggerPath": "C:\\Users\\veryp\\Desktop\\MinGW64\\bin\\gdb.exe",
+            "windows":
+            {
+                "miDebuggerPath": "C:\\Users\\veryp\\Desktop\\MinGW64\\bin\\gdb.exe"
+            },
+            "linux": {
+                "miDebuggerPath": "/usr/bin/gdb"
+            },
             "request": "launch",
             "setupCommands": [{
                 "description": "pretty printing STL classes",
                 "text": "-enable-pretty-printing"
             }],
             "program": "C:\\Users\\veryp\\Desktop\\build\\interview_tasks\\2gis\\gcc-12\\debug\\2gis-ut.exe",
+            "linux": {
+                "program": "/home/xzzyyy/build/interview_tasks/2gis/gcc-11/debug/2gis-ut"
+            },
             "cwd": "${workspaceFolder}",
-            "environment": [{
-                "name": "PATH",
-                "value": "C:\\Users\\veryp\\Desktop\\MinGW64\\bin"
+            "windows": {
+                "environment": [{
+                    "name": "PATH",
+                    "value": "C:\\Users\\veryp\\Desktop\\MinGW64\\bin"
+                }]
+            },
+            "externalConsole": false
+        },
+        {
+            "name": "misc-ut",
+            "type": "cppdbg",
+            "MIMode": "gdb",
+            "windows":
+            {
+                "miDebuggerPath": "C:\\Users\\veryp\\Desktop\\MinGW64\\bin\\gdb.exe"
+            },
+            "linux": {
+                "miDebuggerPath": "/usr/bin/gdb"
+            },
+            "request": "launch",
+            "setupCommands": [{
+                "description": "pretty printing STL classes",
+                "text": "-enable-pretty-printing"
             }],
+            "program": "C:\\Users\\veryp\\Desktop\\build\\interview_tasks\\gcc-12\\debug\\misc-ut.exe",
+            "linux": {
+                "program": "/home/xzzyyy/build/interview_tasks/gcc-11/debug/misc-ut"
+            },
+            "cwd": "${workspaceFolder}",
+            "windows": {
+                "environment": [{
+                    "name": "PATH",
+                    "value": "C:\\Users\\veryp\\Desktop\\MinGW64\\bin"
+                }]
+            },
             "externalConsole": false
         }
     ]
