UT for template for_each function task, better UT and two variations for move constructor task

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,21 @@
         "filesystem": "cpp",
         "ios": "cpp",
         "any": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "barrier": "cpp",
+        "charconv": "cpp",
+        "coroutine": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "regex": "cpp",
+        "rope": "cpp",
+        "slist": "cpp",
+        "latch": "cpp",
+        "ranges": "cpp",
+        "scoped_allocator": "cpp",
+        "shared_mutex": "cpp",
+        "span": "cpp",
+        "syncstream": "cpp",
+        "valarray": "cpp"
     }
 }
